--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,9 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 pylint==2.6.0
 pymongo==3.11.0
+redis==3.5.3
 requests==2.24.0
+rq==1.5.2
 selenium==3.141.0
 six==1.15.0
 soupsieve==2.0.1
